syntax = "proto3";

package delay.v1;

option java_package = "io.github.ahappypie.LightDelay.grpc";
option java_outer_classname = "LightDelayProto";

service LightDelay {
    rpc GetSingleDelay (SingleRequest) returns (SingleResponse) {}
    rpc GetAllDelay (AllRequest) returns (AllResponse) {}
}

enum Body {
    UNKNOWN_PLANET = 0;
    MERCURY = 1;
    VENUS = 2;
    EARTH = 3;
    MARS = 4;
    JUPITER = 5;
    SATURN = 6;
    URANUS = 7;
    NEPTUNE = 8;
}

message SingleRequest {
    uint64 timestamp = 1;

    Body origin = 2;
    Body dest = 3;
}

message SingleResponse {
    uint32 delay = 1;
}

message AllRequest {
    uint64 timestamp = 1;

    Body origin = 2;
}

message DelayEntry {
    Body body = 1;
    uint32 delay = 2;
}

message AllResponse {
    repeated DelayEntry entries = 1;
}